--- a/_sass/minima/repo-card.scss
+++ b/_sass/minima/repo-card.scss
@@ -67,12 +67,7 @@
 .rounded-1 {
     border-radius: 3px !important;
 }
-.border-gray-light {
-    border-color: #eaecef !important;
-}
-.border {
-    border: 1px #e1e4e8 solid !important;
-}
+
 .d-flex {
     display: flex !important;
 	box-sizing: border-box;
